fix: follow modernizer maven plugin instruction